# AT-Historical-Data-Collection

./: .example.env  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/: cleanup.py  columns.py  compaction.py  config.py  const.py  gtfs_static.py  ingest.py  logging_config.py  pipeline.py  processing.py  realtime_ingest.py  static_ingest.py  storage.py  utils.py
app/entities/: base.py  trip_updates.py  vehicle_positions.py
app/pipelines/: base.py  vehicle_positions.py
app/schemas/: base.py  vehicle_positions.py
infra/: .example.env  docker-compose.yml  readme.md
tests/: conftest.py  test_buffer.py  test_cleanup.py  test_compaction.py  test_config.py  test_dedupe.py  test_entity_normalise.py  test_entity_schema.py  test_processing.py
