[project]
name = "at-historical-data-collection-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "deltalake>=1.3.0",
    "duckdb>=1.0.0",
    "gtfs-realtime-bindings>=2.0.0",
    "protobuf>=6.33.2",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests using filesystem or network",
]
filterwarnings = ["ignore::DeprecationWarning"]

[dependency-groups]
dev = ["pre-commit>=4.5.1"]

[tool.ruff]
line-length = 79
